--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+
+
+    - name: Run script file
+      run: |
+          chmod +x ./public/scripts/test.sh
+            ./public/scripts/test.sh
+          shell: bash
     - uses: actions/checkout@v3
     - name: set up JDK 11
       uses: actions/setup-java@v3
