--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,10 +16,8 @@ jobs:
 
 
     - name: Run script file
-      run: |
-          chmod +x ./scripts/getPublickey.sh
-            ./scripts/getPublickey.sh
-          shell: bash
+      run:  sh ./getPublickey.sh
+      shell: bash
     - uses: actions/checkout@v3
     - name: set up JDK 11
       uses: actions/setup-java@v3
