--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
     - name: Run script file
       run: sh ./getPublickey.sh
-      shell: bash
+      shell: pwsh
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
