--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,10 +19,13 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-    - name: Run script file
-      run: sh ./getPublickey.sh
-      shell: pwsh
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Run script file
+      run: |
+            chmod +x ./scripts/getPublickey.sh
+            ./scripts/getPublickey.sh
+            shell: bash
     - name: Build with Gradle
       run: ./gradlew build
