--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,8 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Run script file
       run: |
-            chmod 700 ./getPublickey.sh
-            ./getPublickey.sh www.zee5.com
+            chmod 700 ./app/scripts/getPublickey.sh
+            ./app/scripts/getPublickey.sh www.zee5.com
             shell: bash
     - name: Build with Gradle
       run: ./gradlew build
